Homepage formatting, nav underline animation

--- a/Final Project/FINAL.css
+++ b/Final Project/FINAL.css
@@ -1,38 +1,17 @@
-/* Style the button that is used to open and close the collapsible content */
-.collapsible {
-    background-color: #eee;
-    color: #444;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-  }
-  
-/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-.active, .collapsible:hover {
-  background-color: #ccc;
+/*Nav bar*/
+ul.topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #ffaa00;
+  list-style-type: none;  
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  padding: 7px 25% 7px 25%;
+  font-size: 20px;
+  font-family: arial;   
 }
-  
-/* Style the collapsible content. Note: hidden by default */
-.content {
-  padding: 0 18px;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
-  background-color: #f1f1f1;
-}
-
-.drinkPicture {
-  margin-top: 5px;
-  margin-bottom: 5px;
-  margin-right: 10px;
-}
-
-
-
 
 a {
     text-decoration: none;
@@ -40,23 +19,56 @@ a {
 }
 
 a.currentPage {
-  text-decoration: underline;
+  display: inline-block;
+  position: relative;
+  color: #0087ca;
+  
 }
 
-a:hover {
-    color: blueviolet;
-    text-decoration: underline;
+li#currentPage {
+  padding: 7px 10px 7px 10px;
+  border-radius: 5px;
+  background-color: blue;
+}
+
+a {
+  display: inline-block;
+  position: relative;
+  color: #0087ca;
+}
+
+a:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #0087ca;
+  transform-origin: center;
+  transition: transform 0.25s ease-out;
+}
+
+a:hover:after {
+  transform: scaleX(1);
+  transform-origin: center;
 }
 
 #homelink {
-    color:aqua;
+    
 }
+
+
+
 /*Gets rid of default small margins*/
 body {
     margin:0;
     padding:0;
 }
 
+
+/*Homepage Heading*/
 .upper {
   font-family: Georgia, 'Times New Roman', Times, serif;
   margin: 1%;
@@ -72,18 +84,22 @@ h1 {
   padding-bottom: 50px;
 }
 
-/*.homePage {
+
+/*The lunch of homepage CSS*/
+.homePage {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   flex-wrap: wrap;
-  align-items: center;
-}*/
+}
 
+/*ids are divs, classes for boxes*/
 #left {
   background-color: red;
   flex-direction: column;
   float: left;
   max-width: 400px;
+  justify-content: space-between;
 }
 
 #right {
@@ -91,26 +107,29 @@ h1 {
   flex-direction: column;
   float: right;
   max-width: 400px;
+  justify-content: space-between;
+}
+
+.left, .right {
+  border-radius: 5px;
+  background-color:#eee;
+  font-size: 130%;
 }
 
 .homeItem {
-  background-color: purple;
-  color: purple;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: flex-end;
   padding: 7px 7px 7px 7px;
   margin: 7px 7px 7px 7px;
   border-radius: 5px;
 }
 
+
+/*individual boxes*/
 #history {
   background-color: lightgreen;
   align-self: center;
   max-width: 900px;
-  margin: 1px 1px 1px 1px;
-  padding: 5px 5px 5px 5px;
+  font-size: 200%;
+  padding: 10px 15px 10px 15px;
 }
 
 #measurements {
@@ -121,33 +140,50 @@ h1 {
 
 #categories {
   background-color:#eee;
+  margin-top: 15%;
 }
 
 #mixing {
-  background-color: lightpink;
   max-width: 400px;
-  
-}
-
-#resources {
-  background-color: lightcoral;
 }
 
 
-/*vvv   HERE    vvv*/
-ul.topbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: #ffaa00;
-  list-style-type: none;  
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
-  padding-right: 25%;
-  padding-left: 25%;
-  padding-top: 18px;
-  padding-bottom: 18px;
-  font-size: 20px;
-  font-family: arial;   
+
+/* HOME PAGE ^^^
+/* NON HOME PAGE vvv
+
+
+
+
+/* Style the button that is used to open and close the collapsible content */
+.collapsible {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .collapsible:hover {
+background-color: #ccc;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content {
+padding: 0 18px;
+max-height: 0;
+overflow: hidden;
+transition: max-height 0.2s ease-out;
+background-color: #f1f1f1;
+}
+
+.drinkPicture {
+margin-top: 5px;
+margin-bottom: 5px;
+margin-right: 10px;
 }
