--- a/Final Project/FINAL.css
+++ b/Final Project/FINAL.css
@@ -13,11 +13,6 @@ ul.topbar {
   font-family: arial;   
 }
 
-a {
-    text-decoration: none;
-    color: white;
-}
-
 a.currentPage {
   display: inline-block;
   position: relative;
@@ -35,6 +30,7 @@ a {
   display: inline-block;
   position: relative;
   color: #0087ca;
+  text-decoration: none;
 }
 
 a:after {
@@ -56,10 +52,10 @@ a:hover:after {
 }
 
 #homelink {
-    
+    color: white;
 }
 
-
+/*^^Nav Bar^^*/
 
 /*Gets rid of default small margins*/
 body {
@@ -87,9 +83,10 @@ h1 {
   flex-direction: row;
   justify-content: space-between;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
-/*ids are divs, classes for boxes*/
+/*ids are divs, classes for individual boxes*/
 #left {
   background-color: red;
   flex-direction: column;
@@ -110,6 +107,8 @@ h1 {
   border-radius: 5px;
   background-color:#eee;
   font-size: 130%;
+  padding-left: 4px;
+  padding-top: 0px;
 }
 
 .homeItem {
@@ -118,15 +117,32 @@ h1 {
   border-radius: 5px;
 }
 
-
-/*individual boxes*/
 #history {
   background-color: lightgreen;
   align-self: center;
   max-width: 900px;
   font-size: 200%;
-  padding: 10px 15px 10px 15px;
+  padding: 0px 30px 10px 30px;
 }
+
+/*Syrup buttons*/
+.collapsibleSyrup {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 12px;
+  width: 98%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  margin-top: 5px;
+  margin-left: 4px;
+}
+
+
+/*individual boxes*/
+
 
 #measurements {
   display: flex;
@@ -191,7 +207,7 @@ background-color: #ccc;
 .content {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: left;
   align-items: stretch;
   flex-wrap: wrap;
   padding: 0 18px;
@@ -209,44 +225,48 @@ background-color: #ccc;
 
 
 .ingOverIns {
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
-  margin: 25px 10px 15px 10px;
+  justify-content: space-evenly;
+  margin: 25px 15px 15px 15px;
   padding: 5px 15px 5px 15px;
-  background-color: #ccc;
+  background-color: rgb(226, 226, 226);
   max-width: 600px;
 }
 
 .ingredients {
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   margin: 5px;
-  padding: 5px 15px 5px 15px;
+  padding: 5px 15px 15px 15px;
   max-height: 70px;
-  background-color: red;
+  background-color: rgb(211, 211, 211);
   list-style-type: none;
   list-style-position: inside; 
-  line-height: 25px;
+  line-height: 30px;
 }
 
 .ingredients li {
-  background-color: purple;
-  margin: 2px 5px;
+
 }
 
 .instructions {
+  border-radius: 3px;
   margin: 5px;
   padding: 5px 15px 5px 15px;
-  background-color: lightpink;
+  background-color: rgb(211, 211, 211);
   font-size: large;
 }
 
 .drinkInfo {
+  border-radius: 3px;
   margin-top: 25px;
   padding: 15px 100px 5px 15px;
   background-color: #ccc;
   font-size: 120%;
-  max-width: 600px;
+  max-width: 800px;
   margin-bottom: 15px;
 }
